syntax = "proto3";

package go.micro.srv.getImg;

service GetImg {
	rpc MicroGetImg(Request) returns (Response) {}
}

message Request {
	string uuid = 1;
}

message Response {
	string Errno= 1;
	string Errmsg= 2;
	bytes data = 3;

}
